--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "globals": "^15.9.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.9",
+    "sass-embedded": "^1.77.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.1.0",
     "vite": "^5.4.1"
